@@ -1,14 +1,12 @@
 dayCount <- function(startDates, endDates, dayCounters){
- 
+
   val <- .Call('dayCount', startDates, endDates, dayCounters,
-               PACKAGE="RQuantLib") 
-  val <- unlist(val)
+               PACKAGE="RQuantLib")
   val
 }
 
-yearFraction <- function(startDates, endDates, dayCounters){ 
+yearFraction <- function(startDates, endDates, dayCounters){
   val <- .Call('yearFraction', startDates, endDates, dayCounters,
                PACKAGE="RQuantLib")
-  val <- unlist(val)
   val
 }
